feat(security): add jwt auth, user pass encoding
